add: adicionar verificações na camada de service e exceptions novas nos testes e services